# omniscope-custom-blocks

./: .gitignore  README.md  blocks.json  create_index.py  create_readme.py  extract_python_dependencies.py  index.json
.github/workflows/: refresh_index.yml  refresh_readme.yml
Analytics/Data Profiler/: README.md  script.py
Analytics/Data-Profiler/: manifest.json
Analytics/Survival/: README.md  manifest.json  script.R
Connectors/AI Chat Anthropic Claude/: README.md  manifest.json
Connectors/AI Chat Local LLM/: README.md  manifest.json
Connectors/AI-Chat-Anthropic-Claude/: manifest.json  script.py
Connectors/AI-Chat-DeepSeek/: README.md  manifest.json  script.py
Connectors/AI-Chat-Google-Gemini/: README.md  manifest.json  script.py
Connectors/AI-Chat-Local-LLM/: manifest.json  script.py
Connectors/Airtable/: manifest.json  readme.md  script.py
Connectors/Azure Data Lake Blob/: README.md  manifest.json  script.py
Connectors/Azure-Data-Lake-Blob/: README.md  manifest.json
Connectors/Dune/: README.md  manifest.json  script.py
Connectors/Etherscan/: README.md  manifest.json  script.py
Connectors/Flipside/: README.md  manifest.json  script.py
Connectors/Google BigQuery Writer/: manifest.json
Connectors/HubSpot/: manifest.json  readme.md  script.py
Connectors/Jira/: README.md  manifest.json  script.py
Connectors/MongoDB/: manifest.json  script.py
Connectors/OpenAI GPT/: README.md  manifest.json  script.py
Connectors/Slack API WebClient/: README.md  manifest.json  script.py
Test/: readme.md
visokio-omniprint/: README.md  pyproject.toml
visokio-omniprint/scripts/: build.sh  install.sh  test_install.sh  upload.sh
visokio-omniprint/tests/: __init__.py
visokio-omniprint/visokio_omniprint/: DriverBase.py  Image.py  ImagesPPTX.py  ImagesPdf.py  Pdf.py  Tools.py  __init__.py
(+301 files in other folders)
