[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "visokio-omniprint"
version = "1.1.7"
description = "Visokio Omniscope PDF printing library"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Visokio" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "selenium",
  "webdriver-manager",
  "get-chrome-driver>=1.3.19",
  "tinify",
  "fpdf",
  "urllib3",
  "python-pptx"
]


[project.urls]
Documentation = "https://github.com/visokio/omniscope-custom-blocks/tree/master/visokio-omniprint#readme"
Issues = "https://github.com/visokio/omniscope-custom-blocks/tree/master/visokio-omniprint/issues"
Source = "https://github.com/visokio/omniscope-custom-blocks/tree/master/visokio-omniprint"


[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=visokio_omniprint --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "visokio_omniprint/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
